--- a/notebook/R3_TranscriptsNeighbours.ipynb
+++ b/notebook/R3_TranscriptsNeighbours.ipynb
@@ -9,13 +9,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -23,15 +16,19 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "\n",
     "sys.path.append(os.path.abspath(\"../src\"))\n",
-    "\n",
-    "from pathlib import Path\n",
-    "from plot import plot_VSI_map, plot_celltypes, plot_vsi_with_named_squares, plot_circular_neighborhood\n",
+    "from plot import plot_VSI_map, plot_celltypes, plot_vsi_with_named_squares, plot_circular_neighborhood, plot_knn_neighborhood\n",
     "\n",
     "from IPython.display import display\n",
-    "import numpy as np\n",
+    "from pathlib import Path\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data"
    ]
   },
   {
@@ -787,162 +784,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.neighbors import NearestNeighbors\n",
-    "\n",
-    "def compute_knn(coordinate_df, query_points, k):\n",
-    "    if k > len(coordinate_df):\n",
-    "        raise ValueError(f\"k ({k}) cannot be greater than the number of points in coordinate_df ({len(coordinate_df)})\")\n",
-    "\n",
-    "    coordinates = coordinate_df[['x', 'y', 'z']].values\n",
-    "\n",
-    "    nbrs = NearestNeighbors(n_neighbors=k)\n",
-    "    nbrs.fit(coordinates)\n",
-    "\n",
-    "    distances, indices = nbrs.kneighbors(query_points)\n",
-    "\n",
-    "    results = []\n",
-    "    for query, dist, idx in zip(query_points, distances, indices):\n",
-    "        results.append({\n",
-    "            'query_point': query.tolist(),\n",
-    "            'neighbor_indices': idx.tolist(),\n",
-    "            'neighbor_distances': dist.tolist()\n",
-    "        })\n",
-    "\n",
-    "    return results\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.spatial import ConvexHull\n",
-    "\n",
-    "def plot_focus_points_with_boundary_knn(signals_df, centroid_df, MOD_boundaries, boundaries_df, x_range, y_range, neighbors=[20, 40, 80, 160, 220], \n",
-    "                                        true_boundary = True, plot_top20=False, top20=None):\n",
-    "    signals_filtered = signals_df[\n",
-    "        (signals_df[\"x\"] >= x_range[0]) & (signals_df[\"x\"] <= x_range[1]) &\n",
-    "        (signals_df[\"y\"] >= y_range[0]) & (signals_df[\"y\"] <= y_range[1])\n",
-    "    ]\n",
-    "    centroid_filtered = centroid_df[\n",
-    "        (centroid_df[\"x\"] >= x_range[0]) & (centroid_df[\"x\"] <= x_range[1]) &\n",
-    "        (centroid_df[\"y\"] >= y_range[0]) & (centroid_df[\"y\"] <= y_range[1])\n",
-    "    ]\n",
-    "    MOD_filtered = MOD_boundaries[\n",
-    "        (MOD_boundaries[\"x\"] >= x_range[0]) & (MOD_boundaries[\"x\"] <= x_range[1]) &\n",
-    "        (MOD_boundaries[\"y\"] >= y_range[0]) & (MOD_boundaries[\"y\"] <= y_range[1])\n",
-    "    ]\n",
-    "    boundaries_filtered = boundaries_df[\n",
-    "        (boundaries_df[\"x\"] >= x_range[0]) & (boundaries_df[\"x\"] <= x_range[1]) &\n",
-    "        (boundaries_df[\"y\"] >= y_range[0]) & (boundaries_df[\"y\"] <= y_range[1])\n",
-    "    ]\n",
-    "\n",
-    "\n",
-    "    fig, ax = plt.subplots(figsize=(8, 8), dpi=600)\n",
-    "    norm = Normalize(vmin=0, vmax=2000)\n",
-    "    cmap = plt.cm.Oranges\n",
-    "\n",
-    "    if plot_top20 and top20 is not None:\n",
-    "        marker_styles = ['o', 's', 'D', '^']  # 4 marker styles: circle, square, diamond, triangle\n",
-    "        colors = sns.color_palette(\"tab10\", 5)  # 5 distinct colors from seaborn palette\n",
-    "        top20_dict = {gene: (marker_styles[i % 4], colors[i % 5]) for i, gene in enumerate(top20)}\n",
-    "\n",
-    "        # Plot background signals\n",
-    "        ax.scatter(\n",
-    "            signals_filtered['x'], signals_filtered['y'],\n",
-    "            s=3, color='lightgrey', alpha=0.5, label=\"Other Genes\"\n",
-    "        )\n",
-    "\n",
-    "        # Plot top 20 genes\n",
-    "        for gene, (marker, color) in top20_dict.items():\n",
-    "            subset = signals_filtered[signals_filtered['gene'] == gene]\n",
-    "            ax.scatter(\n",
-    "                subset['x'], subset['y'],\n",
-    "                s=3, color=color, marker=marker, alpha=0.8, label=gene\n",
-    "            )\n",
-    "    else:\n",
-    "        scatter_sig = ax.scatter(\n",
-    "            signals_filtered[\"x\"], signals_filtered[\"y\"],\n",
-    "            s=3,\n",
-    "            c=cmap(norm(signals_filtered[\"Total_brightness\"])),\n",
-    "        )\n",
-    "        # Colorbar\n",
-    "        cbar_wm = plt.colorbar(\n",
-    "            plt.cm.ScalarMappable(norm=norm, cmap=cmap),\n",
-    "            ax=ax,\n",
-    "            shrink=0.5,\n",
-    "            pad=0.02,\n",
-    "            anchor=(0.0, 0.3)\n",
-    "        )\n",
-    "        cbar_wm.set_label(\"Signal Brightness\")\n",
-    "\n",
-    "    # Plot centroids\n",
-    "    ax.scatter(\n",
-    "        centroid_filtered[\"x\"], centroid_filtered[\"y\"],\n",
-    "        s=15,\n",
-    "        c='blue',\n",
-    "        label=\"Cell Centroids\",\n",
-    "        marker=\"x\"\n",
-    "    )\n",
-    "\n",
-    "    # Plot boundaries\n",
-    "    if true_boundary:\n",
-    "        for _, row in boundaries_filtered.iterrows():\n",
-    "            ax.plot(row['boundaryX'], row['boundaryY'], c='grey', lw=1)\n",
-    "        ax.plot([], [], color='grey', lw=1, label=\"Other Cells Boundary\")\n",
-    "        for _, row in MOD_filtered.iterrows():\n",
-    "            ax.plot(row['boundaryX'], row['boundaryY'], c='#00bfae', lw=1)\n",
-    "        ax.plot([], [], color='#00bfae', lw=1, label=\"MOD Cells Boundary\")\n",
-    "\n",
-    "    cmap_rings = mpl.colormaps['tab20']\n",
-    "    for idx, k in enumerate(neighbors):\n",
-    "        color = cmap_rings(idx / len(neighbors))\n",
-    "        label_added = False\n",
-    "        for _, centroid in centroid_filtered.iterrows():\n",
-    "            new_point = np.array([[centroid['x'], centroid['y'], 4.5]])\n",
-    "            knn_results = compute_knn(signals_df, new_point, k)\n",
-    "            neighbors_indices = knn_results[0]['neighbor_indices']\n",
-    "            neighbor_points = signals_df.iloc[neighbors_indices][['x', 'y']].values\n",
-    "            \n",
-    "            # ConvexHull requires at least 3 points\n",
-    "            if len(neighbor_points) < 3:\n",
-    "                continue\n",
-    "\n",
-    "            hull = ConvexHull(neighbor_points)\n",
-    "            for simplex in hull.simplices:\n",
-    "                ax.plot(\n",
-    "                    neighbor_points[simplex, 0],\n",
-    "                    neighbor_points[simplex, 1],\n",
-    "                    color=color,\n",
-    "                    lw=1,\n",
-    "                    label=f\"k={k} NN\" if not label_added else None\n",
-    "                    # label=f\"Boundary k={k}\" if not label_added else None\n",
-    "                )\n",
-    "                label_added = True\n",
-    "    \n",
-    "    ax.set_xlim(x_range)\n",
-    "    ax.set_ylim(y_range)\n",
-    "    ax.set_xlabel(\"X\")\n",
-    "    ax.set_ylabel(\"Y\")\n",
-    "    ax.set_aspect('equal')\n",
-    "    ax.legend(\n",
-    "            loc=\"upper left\", \n",
-    "            bbox_to_anchor=(1.02, 1),\n",
-    "            fontsize=10, \n",
-    "            frameon=False, \n",
-    "            markerscale=1.5, \n",
-    "            ncol=1\n",
-    "        )\n",
-    "    plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -955,7 +796,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_focus_points_with_boundary_knn(signals_df=signal_coordinate_df,\n",
+    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
     "                                centroid_df=merfish_data, \n",
     "                                MOD_boundaries=MOD_boundaries,\n",
     "                                boundaries_df=other_boundaries, \n",
@@ -970,7 +811,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_focus_points_with_boundary_knn(signals_df=signal_coordinate_df,\n",
+    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
     "                                centroid_df=merfish_data, \n",
     "                                MOD_boundaries=MOD_boundaries,\n",
     "                                boundaries_df=other_boundaries,  \n",
@@ -992,7 +833,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_focus_points_with_boundary_knn(signals_df=signal_coordinate_df,\n",
+    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
     "                                centroid_df=merfish_data, \n",
     "                                MOD_boundaries=MOD_boundaries,\n",
     "                                boundaries_df=other_boundaries, \n",
@@ -1007,7 +848,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_focus_points_with_boundary_knn(signals_df=signal_coordinate_df,\n",
+    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
     "                                centroid_df=merfish_data, \n",
     "                                MOD_boundaries=MOD_boundaries,\n",
     "                                boundaries_df=other_boundaries, \n",
@@ -1029,7 +870,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_focus_points_with_boundary_knn(signals_df=signal_coordinate_df,\n",
+    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
     "                                centroid_df=merfish_data, \n",
     "                                MOD_boundaries=MOD_boundaries,\n",
     "                                boundaries_df=other_boundaries, \n",
@@ -1044,7 +885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_focus_points_with_boundary_knn(signals_df=signal_coordinate_df,\n",
+    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
     "                                centroid_df=merfish_data, \n",
     "                                MOD_boundaries=MOD_boundaries,\n",
     "                                boundaries_df=other_boundaries, \n",
@@ -1066,7 +907,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_focus_points_with_boundary_knn(signals_df=signal_coordinate_df,\n",
+    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
     "                                centroid_df=merfish_data, \n",
     "                                MOD_boundaries=MOD_boundaries,\n",
     "                                boundaries_df=other_boundaries, \n",
@@ -1081,7 +922,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_focus_points_with_boundary_knn(signals_df=signal_coordinate_df,\n",
+    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
     "                                centroid_df=merfish_data, \n",
     "                                MOD_boundaries=MOD_boundaries,\n",
     "                                boundaries_df=other_boundaries, \n",
@@ -1103,7 +944,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_focus_points_with_boundary_knn(signals_df=signal_coordinate_df,\n",
+    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
     "                                centroid_df=merfish_data, \n",
     "                                MOD_boundaries=MOD_boundaries,\n",
     "                                boundaries_df=other_boundaries, \n",
@@ -1118,7 +959,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_focus_points_with_boundary_knn(signals_df=signal_coordinate_df,\n",
+    "plot_knn_neighborhood(signals_df=signal_coordinate_df,\n",
     "                                centroid_df=merfish_data, \n",
     "                                MOD_boundaries=MOD_boundaries,\n",
     "                                boundaries_df=other_boundaries, \n",
