--- a/notebook/R5_MODscRNA.ipynb
+++ b/notebook/R5_MODscRNA.ipynb
@@ -8,25 +8,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.io import mmread\n",
     "from pathlib import Path\n",
+    "from scipy.io import mmread\n",
+    "import anndata as ad\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(\"../src\"))\n",
+    "from plot import plot_annotate_heatmap\n",
+    "from utils import load_scRNA_data\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### data"
    ]
   },
   {
@@ -42,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "signal_data_folder_path = Path(\"../data/mouse_hypothalamus/raw/\")"
+    "MERFISH_data_folder_path = Path(\"../data/mouse_hypothalamus/MERFISH/\")"
    ]
   },
   {
@@ -64,7 +69,7 @@
     "]\n",
     "\n",
     "signal_coordinate_df = pd.read_csv(\n",
-    "    signal_data_folder_path / \"merfish_barcodes_example.csv\", usecols=columns\n",
+    "    MERFISH_data_folder_path / \"merfish_barcodes_example.csv\", usecols=columns\n",
     ").rename(\n",
     "    columns={\n",
     "        \"Centroid_X\": \"x\",\n",
@@ -153,17 +158,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seg_data_path = Path(\"../data/mouse_hypothalamus/all_cells\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "merfish_data = pd.read_csv(\n",
-    "    seg_data_path / \"merfish_all_cells.csv\"\n",
+    "    MERFISH_data_folder_path / \"merfish_all_cells.csv\"\n",
     "    ).rename(\n",
     "    columns={\n",
     "        \"Centroid_X\": \"x\",\n",
@@ -225,14 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from pathlib import Path\n",
-    "from scipy.io import mmread\n",
-    "from scipy import sparse\n",
-    "import anndata as ad\n",
-    "\n",
-    "data_path = Path(\"../data/mouse_hypothalamus/singlecell/\")\n",
+    "data_path = Path(\"../data/mouse_hypothalamus/SingleCell/\")\n",
     "mtx_path = data_path / \"GSE113576_matrix.mtx\"\n",
     "barcodes_path = data_path / \"GSE113576_barcodes.tsv\"\n",
     "genes_path = data_path / \"GSE113576_genes.tsv\"\n",
@@ -245,26 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = mmread(mtx_path).tocsr()\n",
-    "cell_ids = pd.read_csv(barcodes_path, sep=\"\\t\", header=None)[0].values\n",
-    "gene_names = pd.read_csv(genes_path, sep=\"\\t\", header=None)[1].values\n",
-    "\n",
-    "adata = ad.AnnData(X=X.T)  # cell x gene\n",
-    "adata.var_names = gene_names\n",
-    "adata.obs_names = cell_ids\n",
-    "adata.var_names_make_unique()\n",
-    "\n",
-    "# filter the unstable and ambiguous cells\n",
-    "meta = pd.read_excel(meta_path).rename(columns={\n",
-    "    \"Cell name\": \"Cell_name\",\n",
-    "    \"Sex\": \"Sex\",\n",
-    "    \"Replicate number\": \"Rep\",\n",
-    "    \"Cell class (determined from clustering of all cells)\": \"Cell_class\",\n",
-    "    \"Non-neuronal cluster (determined from clustering of all cells)\": \"Non_neuronal_cluster\",\n",
-    "    \"Neuronal cluster (determined from clustering of inhibitory or excitatory neurons)\": \"Neuronal_cluster\"\n",
-    "})\n",
-    "\n",
-    "cell_class = {\n",
+    "cell_class_dict = {\n",
     "    'Astrocytes': 'Astrocytes',\n",
     "    'Endothelial': 'Endothelial',\n",
     "    'Ependymal': 'Ependymal',\n",
@@ -278,30 +248,14 @@
     "    'Mural': 'Mural',\n",
     "    'Newly formed oligodendrocyte': 'OD newly formed',\n",
     "}\n",
-    "meta = meta.set_index(\"Cell_name\")\n",
-    "meta = meta.loc[meta[\"Cell_class\"].isin(cell_class.keys())]\n",
-    "adata = adata[adata.obs_names.isin(meta.index)].copy()\n",
-    "adata.obs = meta.loc[adata.obs_names, [\"Cell_class\"]].copy()\n",
-    "adata.obs[\"Cell_class\"] = adata.obs[\"Cell_class\"].map(cell_class)\n",
     "\n",
-    "# Filter out cells where mitochondrial RNA fraction is >= 20%\n",
-    "mt_mask = adata.var_names.str.startswith(\"mt\")\n",
-    "mt_fraction = np.array(adata[:, mt_mask].X.sum(axis=1)).flatten() / (\n",
-    "    np.array(adata.X.sum(axis=1)).flatten() + 1e-6\n",
-    ")\n",
-    "adata = adata[mt_fraction < 0.2, :].copy()\n",
-    "\n",
-    "# keep cells with more than 1,000 detected genes\n",
-    "nonzero_counts = np.array((adata.X != 0).sum(axis=1)).flatten()\n",
-    "adata = adata[nonzero_counts > 1000, :].copy()\n",
-    "\n",
-    "# filter out \"blank\" controls\n",
-    "blank_mask = ~adata.var_names.str.startswith(\"Blank\")\n",
-    "adata = adata[:, blank_mask].copy()\n",
-    "\n",
-    "sc_total = np.array(adata.X.sum(axis=1)).flatten()\n",
-    "adata.X = adata.X.multiply(10_000 / sc_total[:, None])  # normalize\n",
-    "adata.X = adata.X.log1p()  # log1p"
+    "adata = load_scRNA_data(\n",
+    "    mtx_path, \n",
+    "    barcodes_path, \n",
+    "    genes_path, \n",
+    "    meta_path, \n",
+    "    cell_class_filter = cell_class_dict\n",
+    ")"
    ]
   },
   {
@@ -321,10 +275,10 @@
    "source": [
     "# all differentially expressed genes\n",
     "DE_genes = ['Mlc1', 'Dgkk', 'Cbln2', 'Syt4', 'Gad1', 'Plin3', 'Gnrh1', 'Sln', 'Gjc3', 'Mbp', 'Lpar1', 'Trh', 'Ucn3', 'Cck']\n",
-    "# DE_genes_gm: 7\n",
-    "DE_genes_gm = ['Mlc1', 'Dgkk', 'Cbln2', 'Syt4', 'Gad1', 'Plin3', 'Gnrh1', 'Sln', 'Gjc3']\n",
-    "# DE_genes_wm: 8\n",
-    "DE_genes_wm = ['Mbp', 'Lpar1', 'Trh', 'Ucn3', 'Cck']"
+    "# DE_genes_MOD2: 7\n",
+    "DE_genes_MOD2 = ['Mlc1', 'Dgkk', 'Cbln2', 'Syt4', 'Gad1', 'Plin3', 'Gnrh1', 'Sln', 'Gjc3']\n",
+    "# DE_genes_MOD1: 8\n",
+    "DE_genes_MOD1 = ['Mbp', 'Lpar1', 'Trh', 'Ucn3', 'Cck']"
    ]
   },
   {
@@ -334,9 +288,9 @@
    "outputs": [],
    "source": [
     "sc_data = adata.to_df()\n",
-    "sc_DE_gm_df = sc_data[DE_genes_gm]\n",
-    "sc_DE_wm_df = sc_data[DE_genes_wm]\n",
-    "sc_DE = pd.concat([sc_DE_gm_df, sc_DE_wm_df], axis=1)\n",
+    "sc_DE_MOD1_df = sc_data[DE_genes_MOD2]\n",
+    "sc_DE_MOD2_df = sc_data[DE_genes_MOD1]\n",
+    "sc_DE = pd.concat([sc_DE_MOD1_df, sc_DE_MOD2_df], axis=1)\n",
     "\n",
     "sc_cell_class = adata.obs['Cell_class']"
    ]
@@ -355,6 +309,15 @@
     "MOD_merfish_DE = MOD_merfish[common_genes].T\n",
     "\n",
     "MOD_banksy = MOD_merfish['banksy']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Gene_Group = pd.DataFrame([0,0,0,0,0,0,0,0,0,1,1,1,1,1], columns=['cluster'])"
    ]
   },
   {
@@ -395,7 +358,7 @@
     "from scipy.cluster.hierarchy import linkage, leaves_list\n",
     "import matplotlib.patches as patches\n",
     "\n",
-    "def genes_clusters_heatmap(cluster_data, cluster_labels, gene_groups=None, zscore=True, DE_g=True, cmap=heat_cmap):\n",
+    "def genes_clusters_heatmap(cluster_data, cluster_labels, gene_groups=None, zscore=True, DE_g=True, y_pos=-1.2, cmap=heat_cmap):\n",
     "    cluster_data = cluster_data.copy()\n",
     "    cluster_data['Cell_class'] = cluster_labels\n",
     "\n",
@@ -405,9 +368,6 @@
     "    numeric_data = numeric_data.dropna(axis=1, how='any')\n",
     "    numeric_data = numeric_data.loc[:, ~numeric_data.T.duplicated()]\n",
     "    cluster_data = pd.concat([cell_class_col, numeric_data], axis=1)\n",
-    "\n",
-    "    # cluster_data = cluster_data.apply(pd.to_numeric, errors='coerce').dropna(axis=1, how='any')\n",
-    "    # cluster_data = cluster_data.loc[:, ~cluster_data.T.duplicated()]\n",
     "\n",
     "    if 'Cell_class' in cluster_data.columns:\n",
     "        expression_data = cluster_data.drop('Cell_class', axis=1)\n",
@@ -477,8 +437,7 @@
     "    \n",
     "    reordered_expression_data = reordered_expression_data.iloc[new_gene_order, :]\n",
     "\n",
-    "    plt.figure(figsize=(20, 10), dpi=600) # non-OD\n",
-    "    # plt.figure(figsize=(20, 10), dpi=600) # MOD\n",
+    "    plt.figure(figsize=(20, 10), dpi=600)\n",
     "    ax = sns.heatmap(\n",
     "        reordered_expression_data,\n",
     "        vmin=vmin, vmax=vmax,\n",
@@ -507,10 +466,10 @@
     "        start_idx, end_idx = class_indices[0], class_indices[-1]\n",
     "        x_pos = (start_idx + end_idx) / 2\n",
     "\n",
-    "        # ax.text(\n",
-    "        #     x_pos, -1.2, str(label), ha='center', va='center', rotation=90, fontsize=15, color='black' # scRNA, mfsh non-od\n",
-    "        #     # x_pos, -0.9, str(label), ha='center', va='center', rotation=90, fontsize=15, color='black' # merfish mod\n",
-    "        # )\n",
+    "        ax.text(\n",
+    "            x_pos, y_pos, str(label), ha='center', va='center', rotation=90, fontsize=15, color='black' # scRNA, mfsh non-od\n",
+    "            # x_pos, -0.9, str(label), ha='center', va='center', rotation=90, fontsize=15, color='black' # merfish mod\n",
+    "        )\n",
     "\n",
     "        cluster_boundaries.append(end_idx)\n",
     "\n",
@@ -579,15 +538,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gene_g = pd.DataFrame([0,0,0,0,0,0,0,0,0,1,1,1,1,1], columns=['cluster'])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -613,7 +563,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MOD_sc_data.shape"
+    "box_specs = [\n",
+    "    {\"x_offset\": 500, \"width\": 350, \"color\": \"green\"},\n",
+    "    {\"x_offset\": 1350, \"width\": 250, \"color\": \"orange\"},\n",
+    "    {\"x_offset\": 2620, \"width\": 200, \"color\": \"blue\"},\n",
+    "    {\"x_offset\": 4800, \"width\": 1800, \"color\": \"red\"}\n",
+    "]"
    ]
   },
   {
@@ -622,7 +577,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genes_clusters_heatmap(cluster_data=MOD_sc_data, cluster_labels=MOD_sc_cell_class, gene_groups=gene_g, zscore=True, DE_g=True)"
+    "plot_annotate_heatmap(cluster_data = MOD_sc_data, cluster_labels=MOD_sc_cell_class, gene_groups=Gene_Group, show_cluster=False, box_specs=box_specs)"
    ]
   },
   {
@@ -651,16 +606,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genes_clusters_heatmap(cluster_data=noOD_sc_data, cluster_labels=noOD_sc_cell_class, gene_groups=gene_g, zscore=True, DE_g=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# genes_clusters_heatmap(cluster_data=no_OD_sc_DE.T, cluster_labels=no_OD_sc_cell_class, gene_groups=gene_g, zscore=True, DE_g=True)"
+    "plot_annotate_heatmap(cluster_data = noOD_sc_data, cluster_labels=noOD_sc_cell_class, gene_groups=Gene_Group, cluster_text_y=-1.3)"
    ]
   },
   {
@@ -685,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genes_clusters_heatmap(MOD_merfish_DE.T, MOD_banksy, gene_groups=gene_g, zscore=True, DE_g=True)"
+    "plot_annotate_heatmap(cluster_data=MOD_merfish_DE.T, cluster_labels=MOD_banksy, gene_groups=Gene_Group, cluster_text_y=-0.9)"
    ]
   },
   {
@@ -704,10 +650,10 @@
     "OD_mask = merfish_data['Cell_class'].str.startswith(\"OD\")\n",
     "no_OD_merfish_data = merfish_data.drop(merfish_data.index[OD_mask], axis=0, inplace=False)\n",
     "\n",
-    "common_genes_gm = [gene for gene in DE_genes_gm if gene in no_OD_merfish_data.columns]\n",
+    "common_genes_gm = [gene for gene in DE_genes_MOD2 if gene in no_OD_merfish_data.columns]\n",
     "no_OD_merfish_DE_gm = no_OD_merfish_data[common_genes_gm]\n",
     "\n",
-    "common_genes_wm = [gene for gene in DE_genes_wm if gene in no_OD_merfish_data.columns]\n",
+    "common_genes_wm = [gene for gene in DE_genes_MOD1 if gene in no_OD_merfish_data.columns]\n",
     "no_OD_merfish_DE_wm = no_OD_merfish_data[common_genes_wm]\n",
     "\n",
     "no_OD_merfish_DE = pd.concat([no_OD_merfish_DE_gm, no_OD_merfish_DE_wm], axis=1).T\n",
@@ -721,13 +667,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genes_clusters_heatmap(no_OD_merfish_DE.T, no_OD_cell_class, gene_groups=gene_g, zscore=True, DE_g=True)"
+    "plot_annotate_heatmap(cluster_data=no_OD_merfish_DE.T, cluster_labels=no_OD_cell_class, gene_groups=Gene_Group)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ovrlpy_0513",
    "language": "python",
    "name": "python3"
   },
@@ -741,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
