--- a/notebook/R7_MarkerVSI.ipynb
+++ b/notebook/R7_MarkerVSI.ipynb
@@ -8,13 +8,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -22,30 +15,27 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(\"../src\"))\n",
+    "import importlib\n",
+    "import plot\n",
+    "importlib.reload(plot)\n",
+    "import utils\n",
+    "importlib.reload(utils)\n",
+    "\n",
+    "from utils import order_neuron_clusters, get_cluster_boundaries\n",
+    "from plot import plot_neuron_cluster_heatmap\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from matplotlib.colors import LinearSegmentedColormap\n",
-    "\n",
-    "_BIH_CMAP = LinearSegmentedColormap.from_list(\n",
-    "    \"BIH\",\n",
-    "    [\n",
-    "        \"#430541\",\n",
-    "        \"mediumvioletred\",\n",
-    "        \"violet\",\n",
-    "        \"powderblue\",\n",
-    "        \"powderblue\",\n",
-    "        \"white\",\n",
-    "        \"white\",\n",
-    "    ][::-1],\n",
-    ")"
+    "### data"
    ]
   },
   {
@@ -74,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "signal_data_folder_path = Path(\"../../data/mouse_hypothalamus/raw/\")"
+    "MERFISH_data_folder_path = Path(\"../../data/mouse_hypothalamus/MERFISH/\")"
    ]
   },
   {
@@ -96,7 +86,7 @@
     "]\n",
     "\n",
     "signal_coordinate_df = pd.read_csv(\n",
-    "    signal_data_folder_path / \"merfish_barcodes_example.csv\", usecols=columns\n",
+    "    MERFISH_data_folder_path / \"merfish_barcodes_example.csv\", usecols=columns\n",
     ").rename(\n",
     "    columns={\n",
     "        \"Centroid_X\": \"x\",\n",
@@ -192,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "signal_data_folder_path = Path(\"../../data/mouse_hypothalamus/raw/\")"
+    "MERFISH_data_folder_path = Path(\"../../data/mouse_hypothalamus/raw/\")"
    ]
   },
   {
@@ -214,7 +204,7 @@
     "]\n",
     "\n",
     "signal_coordinate_df = pd.read_csv(\n",
-    "    signal_data_folder_path / \"merfish_barcodes_example.csv\", usecols=columns\n",
+    "    MERFISH_data_folder_path / \"merfish_barcodes_example.csv\", usecols=columns\n",
     ").rename(\n",
     "    columns={\n",
     "        \"Centroid_X\": \"x\",\n",
@@ -347,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boundaries_df = pd.read_csv(signal_data_folder_path/'cellboundaries_example_animal.csv')\n",
+    "boundaries_df = pd.read_csv(MERFISH_data_folder_path/'cellboundaries_example_animal.csv')\n",
     "boundaries_df = boundaries_df.dropna(subset=['boundaryX', 'boundaryY'])"
    ]
   },
