--- a/notebook/R5_MODscRNA.ipynb
+++ b/notebook/R5_MODscRNA.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Result 5: MOD markers in scRNA-seq"
+    "## Result 5: MOD markers in scRNA-seq data\n",
+    "Investigated the expression of MOD markers in both ST and scRNA-seq data:  \n",
+    "- in mature oligodendrocytes  \n",
+    "- in non-oligodendrocytes  \n",
+    "\n",
+    "to assess \n",
+    "- whether their expression patterns in scRNA-seq are consistent with those observed in ST data  \n",
+    "- whether these markers are also expressed in other cell types  "
    ]
   },
   {
