--- a/notebook/R6_NeuronCluster.ipynb
+++ b/notebook/R6_NeuronCluster.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Result 6: neuron clusters\n",
-    "specific neuronal clusters identified by scRNA-seq"
+    "Investigate the expression of MOD markers in neuronal clusters identified by Moffitt et al. using scRNA-seq data."
    ]
   },
   {
