--- a/notebook/R7_MarkerVSI.ipynb
+++ b/notebook/R7_MarkerVSI.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Result 7: VSI at the locations of transcripts from markers\n"
+    "## Result 7: VSI at the locations of transcripts from markers\n",
+    "Evaluate VSI at the locations of transcripts from these markers.  \n",
+    "\n",
+    "Examine VSI under different marker exclusion conditions to assess whether MOD marker transcripts influence VSI:  \n",
+    "- using all transcripts  \n",
+    "- excluding MOD1 markers  \n",
+    "- excluding MOD2 markers  \n",
+    "- excluding all MOD markers  "
    ]
   },
   {
@@ -173,69 +180,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Signals in the Tissue Section"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MERFISH_data_folder_path = Path(\"../../data/mouse_hypothalamus/raw/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns = [\n",
-    "    \"Centroid_X\",\n",
-    "    \"Centroid_Y\",\n",
-    "    \"Centroid_Z\",\n",
-    "    \"Gene_name\",\n",
-    "    \"Cell_name\",\n",
-    "    \"Total_brightness\",\n",
-    "    \"Area\",\n",
-    "    \"Error_bit\",\n",
-    "    \"Error_direction\",\n",
-    "]\n",
-    "\n",
-    "signal_coordinate_df = pd.read_csv(\n",
-    "    MERFISH_data_folder_path / \"merfish_barcodes_example.csv\", usecols=columns\n",
-    ").rename(\n",
-    "    columns={\n",
-    "        \"Centroid_X\": \"x\",\n",
-    "        \"Centroid_Y\": \"y\",\n",
-    "        \"Centroid_Z\": \"z\",\n",
-    "        \"Gene_name\": \"gene\",\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "\n",
-    "# remove dummy molecules\n",
-    "signal_coordinate_df = signal_coordinate_df.loc[\n",
-    "    ~signal_coordinate_df[\"gene\"].str.contains(\"Blank|NegControl\"),\n",
-    "]\n",
-    "\n",
-    "signal_coordinate_df[\"gene\"] = signal_coordinate_df[\"gene\"].astype(\"category\")\n",
-    "\n",
-    "# shift the coordinates to avoid the negative values\n",
-    "coordinate_x_m =  signal_coordinate_df['x'].min()\n",
-    "coordinate_y_m =  signal_coordinate_df['y'].min()\n",
-    "signal_coordinate_df['x'] = signal_coordinate_df['x'] - coordinate_x_m\n",
-    "signal_coordinate_df['y'] = signal_coordinate_df['y'] - coordinate_y_m\n",
-    "\n",
-    "# make a copy to avoid SettingWithCopyWarning\n",
-    "signal_coordinate_df = signal_coordinate_df.copy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Results of BANKSY"
    ]
   },
@@ -293,17 +237,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seg_data_path = Path(\"../../data/mouse_hypothalamus/all_cells\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "merfish_data = pd.read_csv(\n",
-    "    seg_data_path / \"merfish_all_cells.csv\"\n",
+    "    MERFISH_data_folder_path / \"merfish_all_cells.csv\"\n",
     "    ).rename(\n",
     "    columns={\n",
     "        \"Centroid_X\": \"x\",\n",
