--- a/notebook/S_Appendix.ipynb
+++ b/notebook/S_Appendix.ipynb
@@ -6,7 +6,11 @@
    "metadata": {},
    "source": [
     "## Appendix\n",
-    "PCA and clustering using scRNA-seq data and BANKSY markers"
+    "PCA and clustering (k-means, Leiden, and hierarchical clustering) were performed on scRNA-seq data using BANKSY markers, with two feature selection strategies:  \n",
+    "- using markers alone  \n",
+    "- combining each marker with its top 25 most correlated genes (BANKSY method)  \n",
+    "\n",
+    "All preprocessing steps follow those described in the BANKSY paper.  "
    ]
   },
   {
